@@ -4,19 +4,37 @@
 	#profile .info .avatar {
 		float: right;
 		}
-	#profile p.followed {
+	#profile #followings p {
 		margin-top: 1em;
 		text-align: center;
-		background-color: rgba(0, 128, 0, .15);
 		padding: .3em 0 .4em 0;
 		border-radius: 5px;
 		cursor: pointer;
 		border: 1px solid rgba(0, 0, 0, .1);
+		-webkit-transition: background-color 0.5s ease-in-out;
 		}
-		#profile p.followed span {
-			background: url('/img/buttons/following_not.png') no-repeat left 0px;
-			padding-left: 24px;
+		#profile #followings p span {
+				background: url('/img/buttons/add.png') no-repeat left;
+				padding-left: 24px;
 			}
-			#profile p.followed span.yes {
-				background: url('/img/buttons/following.png') no-repeat left 0px;
+			#profile #followings p span:after {
+					content: '__MSG_button_follow__';
 				}
+		#profile #followings p.following {
+				background-color: rgba(0, 128, 0, .15);
+			}
+			#profile #followings p.following span {
+				background: url('/img/buttons/following.png') no-repeat left;
+				}
+				#profile #followings p.following span:after {
+					content: '__MSG_button_following__';
+					}
+		#profile #followings p.following:hover {
+			background-color: rgba(255, 0, 0, .15);
+			}
+			#profile #followings p.following:hover span {
+				background: url('/img/buttons/following_not.png') no-repeat left;
+				}
+				#profile #followings p.following:hover span:after {
+						content: '__MSG_button_unfollow__';
+					}
