@@ -7,9 +7,21 @@
 
 ( function() {
 
+	twic.requests.subscribe('follow', function(data, sendResponse) {
+		twic.twitter.follow(data['id'], data['whom_id'], function() {
+			sendResponse( { } );
+		} );
+	} );
+
+	twic.requests.subscribe('unfollow', function(data, sendResponse) {
+		twic.twitter.unfollow(data['id'], data['whom_id'], function() {
+			sendResponse( { } );
+		} );
+	} );
+
 	twic.requests.subscribe('getProfileInfo', function(data, sendResponse) {
 
-		twic.twitter.getUserInfo(data['name'], function(user) {
+		twic.twitter.getUserInfo( data['name'], function(user) {
 			sendResponse( user.fields );
 		} );
 
@@ -17,7 +29,7 @@
 
 	twic.requests.subscribe('getProfileFriendshipInfo', function(data, sendResponse) {
 
-		twic.twitter.getFriendshipInfo(data['source_id'], data['target_id'], function(friend) {
+		twic.twitter.getFriendshipInfo( data['source_id'], data['target_id'], function(friend) {
 			sendResponse( friend.fields );
 		} );
 
