@@ -96,7 +96,7 @@
 				<p class="loader"></p>
 
 				<div id="followings">
-					<p class="followed"><span class="yes">following</span></p>
+					<p><span></span></p>
 				</div>
 			</div>
 		</div>
